--- a/app/views/articles/_comments.html.erb
+++ b/app/views/articles/_comments.html.erb
@@ -1,4 +1,5 @@
 <div>
 	<h4>Comment by <%= comments.author_name %></h4>
 	<p class = 'Comment'><%= comments.body %></p>
+	<p>Posted <%= distance_of_time_in_words(comments.article.created_at, comments.created_at) %> later</p>
 </div>
