--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -5,7 +5,7 @@
 <p><%= link_to 'Delete', article_path(@article), 
 			method: :delete,
 			data: {confirm: "Really? Delete it?"} %></p>
-<h3>Comments</h3>
+<h3>Comments (<%= @article.comments.size %>)</h3>
 <%= render partial: 'articles/comments', collection: @article.comments %>
 
 <%= render partial: 'comments/form' %>
