--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,5 +1,11 @@
 <h1>These are the Articles</h1>
 <p><%= @article.title %></p>
+<p>
+	Tags:
+	<% @article.tags.each do |tag| %>
+		<%= link_to tag.name, tag_path(tag) %>
+	<% end %>
+</p>
 <p><%= @article.body %></p>
 <p><%= link_to 'Edit', edit_article_path(@article) %></p>
 <p><%= link_to 'Delete', article_path(@article), 
@@ -11,3 +17,4 @@
 <%= render partial: 'comments/form' %>
 
 <%= link_to 'Back to the list of articles', articles_path %>
+<%= link_to 'Show all tags', tags_path %>
