--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -6,6 +6,13 @@
 		<%= link_to tag.name, tag_path(tag) %>
 	<% end %>
 </p>
+<p>
+	<% if @article.image.exists? %>
+		<%= image_tag @article.image.url(:medium) %>
+	<% else %>
+		<%= puts 'No file attached' %>
+	<% end %>
+</p>
 <p><%= @article.body %></p>
 <p><%= link_to 'Edit', edit_article_path(@article) %></p>
 <p><%= link_to 'Delete', article_path(@article), 
