--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -1,5 +1,5 @@
 <h1>All Tags</h1>
-
+<% if logged_in? %>
 <ul>
 	<% @tag.each do |tag| %>
 		<li><%= link_to tag.name, article_path(tag) %>
@@ -11,3 +11,7 @@
 </ul>
 
 <p><%= link_to 'Back to All Articles', articles_path %></p>
+<% else %>
+<h3>You are not logged in.  Please login in below.</h3>
+
+<% end %>
